--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 services:
-  -   docker
+  -  docker
 before_install: 
-  -   docker build -t sm1982c/docker-react -f Dockerfile.dev .
+  -  docker build -t SSoodehMotaharii/docker-react -f Dockerfile.dev .
 script:
-  -   docker run -e CI=true sm1982c/docker-react npm run test
+  -  docker run -e CI=true SSoodehMotaharii/docker-react npm run test
